Added summary in about section

--- a/recipes/jags/meta.yaml
+++ b/recipes/jags/meta.yaml
@@ -32,11 +32,11 @@ about:
   license: GPL-2.0
   license_family: GPL
   license_file: COPYING
-
   description: |
     JAGS is Just Another Gibbs Sampler. It is a program for analysis of Bayesian
     hierarchical models using Markov Chain Monte Carlo (MCMC) simulation
     not wholly unlike BUGS.
+  summary: JAGS is Just Another Gibbs Sampler
 
 extra:
   recipe-maintainers:
