--- a/recipes/xtensor-fftw/meta.yaml
+++ b/recipes/xtensor-fftw/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xtensor-fftw" %}
-{% set version = "0.1.1" %}
-{% set sha256 = "0a41297505bdce333bb4a9a6d2ab79aee05af0e1f78aac0ab0a5cb066bc15577" %}
+{% set version = "0.1.2" %}
+{% set sha256 = "9da7fa7209fd268cce0a7c55336d85f3885ac7dd847fe3b67e3b5b81f0c5c6d7" %}
 
 package:
   name: {{ name|lower }}
@@ -30,10 +30,10 @@ requirements:
 test:
   commands:
     - test -d ${PREFIX}/include/xtensor-fftw  # [unix]
-    - test -f ${PREFIX}/include/xtensor-fftw/basic.hpp  # [unix]
+    - test -f ${PREFIX}/include/xtensor-fftw/xtensor-fftw_config.hpp  # [unix]
     - test -f ${PREFIX}/lib/cmake/xtensor-fftw/xtensor-fftwConfig.cmake  # [unix]
     - test -f ${PREFIX}/lib/cmake/xtensor-fftw/xtensor-fftwConfigVersion.cmake  # [unix]
-    - if exist %LIBRARY_PREFIX%\include\xtensor-fftw\basic.hpp (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\include\xtensor-fftw\xtensor-fftw_config.hpp (exit 0) else (exit 1)  # [win]
     - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-fftwConfig.cmake (exit 0) else (exit 1)  # [win]
     - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-fftwConfigVersion.cmake (exit 0) else (exit 1)  # [win]
 
