Added Fortran dependencies

--- a/recipes/jags/meta.yaml
+++ b/recipes/jags/meta.yaml
@@ -19,10 +19,11 @@ requirements:
   build:
     - toolchain
     - gcc  # [osx]
+    - libgfortran  # [linux]
     - lapack
   run:
     - lapack
-    - libgcc
+    - libgfortran
 
 test:
   commands:
