Turns out gcc is needed after all

--- a/recipes/jags/meta.yaml
+++ b/recipes/jags/meta.yaml
@@ -18,8 +18,7 @@ build:
 requirements:
   build:
     - toolchain
-    - gcc  # [osx]
-    - libgfortran  # [linux]
+    - gcc
     - lapack
   run:
     - lapack
