updated changes in meta.yaml

--- a/recipes/jieba3k/meta.yaml
+++ b/recipes/jieba3k/meta.yaml
@@ -14,8 +14,10 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
   script: 'python setup.py install '
+  skip: True  # [py2k]
 
 requirements:
   build:
@@ -28,13 +30,13 @@ test:
     - jieba
 
 about:
-  home: http://github.com/fxsjy
+  home: http://github.com/fxsjy/jieba
   license: MIT
   license_family: MIT
   license_file: LICENSE
   summary: Chinese Words Segementation Utilities
   description: " "Jieba" (Chinese for "to stutter") Chinese text segmentation: built to be the best Python Chinese word segmentation module."
-  dev_url: 'http://github.com/fxsjy'
+  dev_url: 'http://github.com/fxsjy/jieba'
 
 extra:
   recipe-maintainers: 
