adding dot at end of summary to try triggering circleci build

--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -28,7 +28,7 @@ about:
     home:  http://github.com/OphidiaBigData/PyOphidia
     license:  GPL-3.0
     licence_file: LICENSE
-    summary: PyOphidia is a Python package for interacting with the Ophidia framework
+    summary: PyOphidia is a Python package for interacting with the Ophidia framework.
 
 extra:
     recipe-maintainers:
