--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -27,6 +27,7 @@ test:
 about:
     home:  http://github.com/OphidiaBigData/PyOphidia
     license:  GPL-3.0
+    license_family: GPL
     licence_file: LICENSE
     summary: PyOphidia is a Python package for interacting with the Ophidia framework.
 
