--- a/recipes/newspaper3k/meta.yaml
+++ b/recipes/newspaper3k/meta.yaml
@@ -14,25 +14,16 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
-
+  skip: True  # [py2k]
+  
 requirements:
   build:
     - python
     - setuptools
-    - beautifulsoup4 >=4.4.1
-    - pillow >=3.3.0
-    - pyyaml >=3.11
-    - cssselect >=0.9.2
-    - lxml >=3.6.0
-    - nltk >=3.2.1
-    - requests >=2.10.0
-    - feedparser >=5.2.1
-    - tldextract >=2.0.1
-    - feedfinder2 >=0.0.4
-    - jieba3k >=0.35.1
-    - python-dateutil >=2.5.3
+  
   run:
     - python
     - beautifulsoup4 >=4.4.1
@@ -67,3 +58,5 @@ about:
 extra:
   recipe-maintainers: 
   - ganeshhubale
+     
+  
