updated file meta.yaml

--- a/recipes/yapsy/meta.yaml
+++ b/recipes/yapsy/meta.yaml
@@ -30,9 +30,9 @@ test:
 
 about:
   home: http://yapsy.sourceforge.net
-  license: BSD License
+  license: BSD 
   license_family: BSD
-  license_file: ''
+  license_file: LICENSE.txt
   summary: Yet another plugin system
   description: "Yapsy is a small library implementing the core mechanisms needed to build a plugin system."
   doc_url: 'http://yapsy.sourceforge.net'
