Comment out license entry
License file has been added to upstream repo, but this has not been pushed to PyPi. Thus referencing it will cause a build error since the non-existent file cannot be copied.

--- a/recipes/macfsevents/meta.yaml
+++ b/recipes/macfsevents/meta.yaml
@@ -31,7 +31,8 @@ about:
   home: https://github.com/malthe/macfsevents
   license: BSD-2-Clause
   license_family: BSD
-  license_file: LICENSE.txt
+  # License is available in repo, but not in PyPi Wheel. Un-commenting the following line uncommented will cause a build error due to the missing file.
+  # license_file: LICENSE.txt
   summary: Thread-based interface to file system observation primitives.
   description: "MacFSEvents is a Python library that provides thread-safe directory observation primitives using callbacks. It wraps the Mac OS X FSEvents API in a C-extension.
 
