Change name to match PyPi casing
Should prevent HTTP errors.

--- a/recipes/macfsevents/meta.yaml
+++ b/recipes/macfsevents/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "macfsevents" %}
+{% set name = "MacFSEvents" %}
 {% set version = "0.7" %}
 {% set sha256 = "95d3cddaf8a42435bfbd50087785ee9e3ebb8325242cfd06a88ea21f85bcb56f" %}
 
