--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -22,6 +22,7 @@ build:
 requirements:
   build:
     - r-base
+    - libiconv
 
   run:
     - r-base
@@ -43,3 +44,6 @@ about:
     inserted into 'Sweave' / 'knitr' easily.
   license_family: GPL
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+
+maintainers:
+    - Cashalow
