prevent being built against 3.4.2 from default

--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -21,11 +21,10 @@ build:
 
 requirements:
   build:
-    - r-base
-    - libiconv
+    - r-base < 3.4.2
 
   run:
-    - r-base
+    - r-base < 3.4.2
 
 test:
   commands:
