--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -44,5 +44,6 @@ about:
   license_family: GPL
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
-maintainers:
+extra:
+  recipe-maintainers:
     - Cashalow
