--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -21,10 +21,10 @@ build:
 
 requirements:
   build:
-    - r-base < 3.4.2
+    - r-base <= 3.4.1
 
   run:
-    - r-base < 3.4.2
+    - r-base <= 3.4.1
 
 test:
   commands:
