--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -21,10 +21,10 @@ build:
 
 requirements:
   build:
-    - r-base =< 3.4.1
+    - r-base
 
   run:
-    - r-base =< 3.4.1
+    - r-base
 
 test:
   commands:
