ENH changes to address CR

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -15,7 +15,6 @@ source:
 build:
   number: 0
   skip: True  # [win]
-  script: build.sh
 
 requirements:
   build:
@@ -23,11 +22,18 @@ requirements:
     - cmake
 
 test:
+  requires:
+    - perl
+
+  source_files:
+    - mysql-test
+
   commands:
     - mysql_config --version
     - my_print_defaults --version
     - mysqld --help --verbose
     - command -v mysql.server
+    - mysql_temp_dir=`mktemp -d ${TMPDIR}/tmp/XXXXXXXXXXXX` && ./mysql-test-run.pl status --vardir=${mysql_temp_dir}
 
 about:
   home: https://www.mysql.com/
