ENH added changes for CR

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -20,20 +20,14 @@ requirements:
   build:
     - toolchain
     - cmake
+    - perl 5.22.2.1
 
 test:
-  requires:
-    - perl
-
-  source_files:
-    - mysql-test
-
   commands:
     - mysql_config --version
     - my_print_defaults --version
     - mysqld --help --verbose
     - command -v mysql.server
-    - mysql_temp_dir=`mktemp -d ${TMPDIR}/tmp/XXXXXXXXXXXX` && ./mysql-test-run.pl status --vardir=${mysql_temp_dir}
 
 about:
   home: https://www.mysql.com/
