Add recipe for pycovjson

--- a/recipes/pycovjson/meta.yaml
+++ b/recipes/pycovjson/meta.yaml
@@ -32,7 +32,7 @@ test:
 
 about:
   home: https://github.com/Reading-eScience-Centre/pycovjson
-  license: BSD 3-clause "New" or "Revised" License
+  license: BSD 3-clause
   license_family: BSD
   license_file: LICENSE
   summary: 'Create CovJSON files from common scientific data formats'
