Fix linter error

--- a/recipes/pydash/meta.yaml
+++ b/recipes/pydash/meta.yaml
@@ -29,8 +29,7 @@ test:
 
 about:
   home: https://github.com/dgilland/pydash
-  license: MIT License
-  license_family: MIT
+  license: MIT
   license_file: LICENSE.rst
   summary: The kitchen sink of Python utility libraries for doing "stuff" in a functional way. 
   description: "The kitchen sink of Python utility libraries for doing stuff in a functional way. Based on Lo-Dash JS library"
