ISSUE-4316 Add recipe for pycovjson

--- a/recipes/pycovjson/meta.yaml
+++ b/recipes/pycovjson/meta.yaml
@@ -14,6 +14,12 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - pycovjson-convert = pycovjson.cli.convert:main
+    - pycovjson-viewer = pycovjson.cli.viewer:main
+  noarch: python
+  skip: True  # [py2k]
+
 
 requirements:
   build:
@@ -29,8 +35,13 @@ requirements:
 test:
   imports:
     - pycovjson
+  commands:
+    - pycovjson-convert -h
+    - pycovjson-viewer -h
 
 about:
+  about:
+    license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   home: https://github.com/Reading-eScience-Centre/pycovjson
   license: BSD 3-clause
   license_family: BSD
