using script from bgruening/conda_r_skeleton_helper

--- a/recipes/r-bigrquery/meta.yaml
+++ b/recipes/r-bigrquery/meta.yaml
@@ -12,12 +12,11 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/bigrquery_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/bigrquery/bigrquery_{{ version }}.tar.gz
-
-
   sha256: 2168e9cdd76aa253f65ee3bf1670af7c4e19e52e3ef8c49c64a96241d12f111e
 
 build:
   number: 0
+  skip: true  # [win32]
 
   rpaths:
     - lib/R/lib/
@@ -52,12 +51,16 @@ test:
     - $R -e "library('bigrquery')"  # [not win]
     - "\"%R%\" -e \"library('bigrquery')\""  # [win]
 
-
 about:
   home: https://github.com/rstats-db/bigrquery
-  license: GPL-3 | file LICENSE
+  license: GPL-3
   summary: Easily talk to Google's 'BigQuery' database from R.
   license_family: GPL3
 
-
-
+extra:
+  recipe-maintainers:
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
+    - adrianzo
