--- a/recipes/phosphor/meta.yaml
+++ b/recipes/phosphor/meta.yaml
@@ -29,7 +29,7 @@ test:
 about:
   home: https://github.com/phosphorjs/phosphor
   license: BSD-3-Clause
-  license_family: BSD-3-Clause
+  license_family: BSD
   license_file: LICENSE
   summary: 'The PhosphorJS Library'
   description: |
