changes added to meta.yaml

--- a/recipes/yapsy/meta.yaml
+++ b/recipes/yapsy/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "yapsy" %}
+{% set name = "Yapsy" %}
 {% set version = "1.11.223" %}
 {% set file_ext = "tar.gz" %}
 {% set hash_type = "sha256" %}
@@ -14,6 +14,7 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
@@ -30,7 +31,7 @@ test:
 
 about:
   home: http://yapsy.sourceforge.net
-  license: BSD 
+  license: BSD-2-Clause
   license_family: BSD
   license_file: LICENSE.txt
   summary: Yet another plugin system
