ENH use deps from conda forge

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -21,6 +21,12 @@ requirements:
     - toolchain
     - cmake
     - perl 5.22.2.1
+    - libedit
+    - openssl
+
+  run:
+    - libedit
+    - openssl
 
 test:
   commands:
