--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -21,8 +21,8 @@ requirements:
     - toolchain
     - cmake
     - perl 5.22.2.1
-    - libedit
-    - openssl
+    - libedit 3.1
+    - openssl 1.0.*
 
   run:
     - libedit
