--- a/recipes/r-bigrquery/meta.yaml
+++ b/recipes/r-bigrquery/meta.yaml
@@ -56,6 +56,8 @@ about:
   license: GPL-3
   summary: Easily talk to Google's 'BigQuery' database from R.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3' # [win]
 
 extra:
   recipe-maintainers:
