--- a/recipes/jquery-mobile/meta.yaml
+++ b/recipes/jquery-mobile/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/jquery/{{ jquery-mobile }}/archive/{{ version }}.tar.gz
+  url: https://github.com/jquery/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
