Changes in meta.yaml

--- a/recipes/jieba3k/meta.yaml
+++ b/recipes/jieba3k/meta.yaml
@@ -30,13 +30,13 @@ test:
     - jieba
 
 about:
-  home: http://github.com/fxsjy/jieba
+  home: https://github.com/fxsjy/jieba/tree/jieba3k
   license: MIT
   license_family: MIT
   license_file: LICENSE
   summary: Chinese Words Segementation Utilities
   description: " "Jieba" (Chinese for "to stutter") Chinese text segmentation: built to be the best Python Chinese word segmentation module."
-  dev_url: 'http://github.com/fxsjy/jieba'
+  dev_url: 'https://github.com/fxsjy/jieba/tree/jieba3k'
 
 extra:
   recipe-maintainers: 
