Update github login of Marijan

--- a/recipes/oommfc/meta.yaml
+++ b/recipes/oommfc/meta.yaml
@@ -60,7 +60,7 @@ about:
 extra:
   recipe-maintainers:
     - fangohr
-    - mb1a15
+    - marijanbeg
     - takluyver
     - davidcortesortuno
     - rpep
