--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -25,8 +25,8 @@ requirements:
     - openssl 1.0.*
 
   run:
-    - libedit
-    - openssl
+    - libedit 3.1
+    - openssl 1.0.*
 
 test:
   commands:
