changed mac to osx in skip statement

--- a/recipes/phosphor/meta.yaml
+++ b/recipes/phosphor/meta.yaml
@@ -14,7 +14,7 @@ build:
   number: 0
   noarch: generic
   script: npm install -g .
-  skip: True  # [mac]
+  skip: True  # [osx]
 
 requirements:
   build:
