Updated description of meta.yaml

--- a/recipes/jieba3k/meta.yaml
+++ b/recipes/jieba3k/meta.yaml
@@ -35,7 +35,7 @@ about:
   license_family: MIT
   license_file: LICENSE
   summary: Chinese Words Segementation Utilities
-  description: " "Jieba" (Chinese for "to stutter") Chinese text segmentation: built to be the best Python Chinese word segmentation module."
+  description: "Jieba (Chinese for 'to stutter') Chinese text segmentation: built to be the best Python Chinese word segmentation module."
   dev_url: 'https://github.com/fxsjy/jieba/tree/jieba3k'
 
 extra:
