Satisfy the linter

--- a/recipes/msumastro/meta.yaml
+++ b/recipes/msumastro/meta.yaml
@@ -49,7 +49,7 @@ test:
 
 about:
   home: http://github.com/mwcraig/msumastro
-  license: BSD License
+  license: 3-clause
   license_family: BSD
   license_file: 'LICENSE.rst'
   summary: Tools for doing preliminary processing of images from Feder Observatory.
