--- a/recipes/ipyevents/meta.yaml
+++ b/recipes/ipyevents/meta.yaml
@@ -15,6 +15,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
