--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -31,6 +31,7 @@ about:
   home: https://github.com/dfm/feedfinder2
   license: MIT 
   license_family: MIT
+  license_file: LICENSE
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: Find the feed URLs for a website.
   description: "This is a Python library for finding links feeds on a website." 
