--- a/recipes/jquery-mobile/meta.yaml
+++ b/recipes/jquery-mobile/meta.yaml
@@ -29,7 +29,7 @@ about:
   home: https://github.com/jquery/jquery-mobile
   license: MIT
   license_family: MIT
-  license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'jQuery Mobile Framework'
   description: |
     jQuery Mobile is a unified, HTML5-based user interface system for all popular 
