Added recipe-maintainers section

--- a/recipes/r-rjags/meta.yaml
+++ b/recipes/r-rjags/meta.yaml
@@ -49,6 +49,10 @@ about:
   summary: Interface to the JAGS MCMC library.
   license_family: GPL2
 
+extra:
+  recipe-maintainers:
+    - micknudsen
+
 # The original CRAN metadata for this package was:
 
 # Package: rjags
