JAGS version must be 4-something

--- a/recipes/r-rjags/meta.yaml
+++ b/recipes/r-rjags/meta.yaml
@@ -31,13 +31,13 @@ requirements:
     - r-base
     - r-coda >=0.13
     - gcc
-    - jags
+    - jags 4.*
 
   run:
     - r-base
     - r-coda >=0.13
     - libgcc
-    - jags
+    - jags 4.*
 
 test:
   commands:
