--- a/recipes/r-rjags/meta.yaml
+++ b/recipes/r-rjags/meta.yaml
@@ -32,12 +32,14 @@ requirements:
     - r-coda >=0.13
     - gcc
     - jags 4.*
+    - libiconv >=1.15
 
   run:
     - r-base
     - r-coda >=0.13
     - libgcc
     - jags 4.*
+    - libiconv >=1.15
 
 test:
   commands:
