Still not sure what is causing problems

--- a/recipes/r-rjags/meta.yaml
+++ b/recipes/r-rjags/meta.yaml
@@ -19,7 +19,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [win and osx]
+  skip: true  # [win]
 
   rpaths:
     - lib/R/lib/
@@ -32,14 +32,12 @@ requirements:
     - r-coda >=0.13
     - gcc
     - jags 4.*
-    - libiconv >=1.15
 
   run:
     - r-base
     - r-coda >=0.13
     - libgcc
     - jags 4.*
-    - libiconv >=1.15
 
 test:
   commands:
