Update to version 0.4.1

--- a/recipes/reducer/meta.yaml
+++ b/recipes/reducer/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "reducer" %}
-{% set version = "0.4.0" %}
+{% set version = "0.4.1" %}
 {% set file_ext = "tar.gz" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "34808bbbb6b65b2dcad5a6e657486a2c949c14be3a7810aa3207eb10d7f5a007" %}
+{% set hash_value = "77a8cc5e48adc360e044e0eaf4ad39e2aced049d1d015f0cad6046ee7ef6dfde" %}
 
 package:
   name: '{{ name|lower }}'
@@ -23,15 +23,6 @@ requirements:
   build:
     - python
     - setuptools
-    - astropy >=2.0
-    - numpy
-    - scipy
-    - scikit-image
-    - ipywidgets >=7
-    - msumastro >=0.9
-    - ccdproc >=1.2
-    - matplotlib
-    - dask
   run:
     - python
     - astropy >=2.0
@@ -49,43 +40,19 @@ test:
     - reducer
   commands:
     - reducer --help
-  requires:
-    - astropy >=2.0
-    - ccdproc >=1.2
-    - dask
-    - ipywidgets >=7
-    - matplotlib
-    - msumastro >=0.9
-    - numpy
-    - pytest >1.4
-    - scikit-image
-    - scipy
 
 about:
   home: http://reducer.readthedocs.org
-  license: BSD License
+  license: BSD 3-clause
   license_family: BSD
-  license_file: ''
-  summary: Process FITS files
-  description: "This package provides a Jupyter notebook for reducing CCD data.\n\nDocumentation is at: https://reducer.readthedocs.org\n\n.. image:: http://img.shields.io/badge/powered%20by-AstroPy-orange.svg?style=flat\
-    \ :target:http://astropy.org\n\nPlease provide feedback\n=======================\n\nComments are very, very much welcome. Please comment by `making a new\nissue on Github <https://github.com/mwcraig/reducer/issues>`__\
-    \ (if, by\nchance, a reasonably senior academic is using this, you can send\nfeedback by email; anyone else should *really* create a github account\nso you can make an issue :)).\n\nInstallation\n============\n\
-    \n\n**Note about IPython/Jupyter version support:** Version 0.3 and higher of\nreducer works with IPython 4/Jupyter. Version 0.1 works with IPython 2, and\nVersion 0.2.x work with IPython 3 or IPython\
-    \ 4/Jupyter. No improvements to\n``reducer`` will be backported to version 0.1.x/IPython 2 or to 0.2.x/IPYthon\n3. Feel free to fork if you need that!\n\nYou need python (2.7, or 3.4 or higher) and\
-    \ the `SciPy\nstack <http://scipy.org>`__. The easiest way to the get the full stack\nis from a distribution like `anaconda <http://continuum.io>`__.\n\nOn Windows it will be easiest to install using\
-    \ the Anaconda Python\ndistribution and ``conda`` (because everything has been compiled for you).\n\nTo install using ``conda``:\n\n::\n\n    conda install -c mwcraig -c astropy reducer\n\n\nIf you\
-    \ prefer, you can install with pip in any python distribution (but may\nend up compiling some of the dependencies):\n\n::\n\n    pip install reducer\n\n\nYou can, if you want, grab the source on github\
-    \ (there is a \"Download as\nZIP\" link on the right you can use if you don't want to mess git),\nchange into the source directory, and run ``python setup.py install``.\n\n.. note::\n\n    `reducer`\
-    \ comes with a small set of images; the download size is roughly\n    13MB. It is provided so you can try the notebook without needing your own\n    data. If you run the notebook as-is then the sample\
-    \ images will get\n    expanded to 300MB in a temporary directory.\n\n\nUsage\n=====\n\nThis package doesn't magically do your reduction for you. Instead, it\ncreates a template `jupyter notebook <http://jupyter.org>`_\
-    \ that leads\nyou through data reduction. When you are done\nyou have reduced your data and *you have a notebook that allows you or\nsomeone else to reproduce your work*.\n\nIn a terminal, navigate\
-    \ to the directory where you want to keep the\nnotebook for doing your reduction (which does not have to be the same\ndirectory where the data is, though it can be), then type::\n\n    reducer\n\nThis\
-    \ will create a new template notebook. To open the notebook, type\nin a terminal::\n\n    jupyter notebook\n\nA browser window will open; the notebook you want is named \"reduction.ipynb\".\nClick on\
-    \ it, then just do what it says in the notebook and reduced data (and\nsomeday photometry!) will be yours.\n\nUnder the hood\n==============\n\nIf you look at the source code you'll notice pretty quickly\
-    \ that there\nis no actual *science* code. Think of this as the glue that brings\ntogether a couple related packages:\n\n-  `ccdproc <http://github.com/astropy/ccdproc>`__ for the actual data\n   reduction.\n\
-      -  `astropy <http://github.com/astropy>`__ for lots of the underlying\n   structure .\n"
-  doc_url: ''
-  dev_url: ''
+  license_file: LICENSE.rst
+  summary: Jupyter widget-based package for reducing FITS images
+  description: |
+    reducer provides a a widget interface in a Jupyter notebook to the ccdproc package
+    for calibrating astronomical images.
+  doc_url: http://reducer.readthedocs.org
+  dev_url: https://github.com/mwcraig/reducer
 
 extra:
-  recipe-maintainers: ''
+  recipe-maintainers:
+    - mwcraig
