--- a/recipes/macfsevents/meta.yaml
+++ b/recipes/macfsevents/meta.yaml
@@ -31,8 +31,9 @@ about:
   home: https://github.com/malthe/macfsevents
   license: BSD-2-Clause
   license_family: BSD
-  # License is available in repo, but not in PyPi Wheel. Un-commenting the following line uncommented will cause a build error due to the missing file.
-  # license_file: LICENSE.txt
+  # License is available in upstream repo, but not in PyPi Wheel.
+  # Manually packaging it per https://conda-forge.org/docs/meta.html#packaging-the-license-manually
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: Thread-based interface to file system observation primitives.
   description: "MacFSEvents is a Python library that provides thread-safe directory observation primitives using callbacks. It wraps the Mac OS X FSEvents API in a C-extension.
 
