Depend on quartz

--- a/recipes/pyautogui/meta.yaml
+++ b/recipes/pyautogui/meta.yaml
@@ -15,7 +15,6 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: python setup.py install  --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -27,7 +26,8 @@ requirements:
     - pymsgbox
     - pytweening
     - pyscreeze
-    - python-xlib
+    - python-xlib  # [linux]
+    - pyobjc-framework-quartz  # [osx]
 
 test:
   imports:
