pin libedit more precisely

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -21,11 +21,11 @@ requirements:
     - toolchain
     - cmake
     - perl 5.22.2.1
-    - libedit 3.1
+    - libedit 3.1.20170329
     - openssl 1.0.*
 
   run:
-    - libedit 3.1
+    - libedit >=3.1.20170329
     - openssl 1.0.*
 
 test:
