Add command for running tests

--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - python
     - setuptools
     - enum34  # [py2k]
-    - llvmdev==5.0.0 
+    - llvmdev ==5.0.0 
   run:
     - python
     - enum34  # [py2k]
@@ -33,6 +33,8 @@ test:
     - llvmlite.ir
     - llvmlite.llvmpy
     - llvmlite.tests
+  commands:
+    - python -m llvmlite.tests
 
 about:
   home: http://llvmlite.pydata.org
