--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - python
     - setuptools
     - enum34  # [py2k]
-    - llvmdev ==5.0.0 
+    - llvmdev 
   run:
     - python
     - enum34  # [py2k]
