--- a/recipes/r-spatialextremes/meta.yaml
+++ b/recipes/r-spatialextremes/meta.yaml
@@ -51,3 +51,10 @@ about:
     Dombry et al. (2013) <doi:10.1093/biomet/ass067>.'
 
   license_family: GPL3
+
+extra:
+  recipe-maintainers:
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
