update with latest conda_r_skeleton_helper

--- a/recipes/r-spatialextremes/meta.yaml
+++ b/recipes/r-spatialextremes/meta.yaml
@@ -1,5 +1,8 @@
 {% set version = '2.0-5' %}
 
+{% set posix = 'm2-' if win else '' %}
+{% set native = 'm2w64-' if win else '' %}
+
 package:
   name: r-spatialextremes
   version: {{ version|replace("-", "_") }}
@@ -13,6 +16,7 @@ source:
 
 build:
   number: 0
+  skip: true  # [win32]
 
   rpaths:
     - lib/R/lib/
@@ -22,18 +26,20 @@ requirements:
     - r-base
     - r-fields
     - r-maps
-    - gcc  # [linux]
-    - llvm # [osx]
+    - posix                # [win]
+    - {{native}}toolchain  # [win]
+    - gcc                  # [not win]
 
   run:
     - r-base
     - r-fields
     - r-maps
-    - libgcc # [linux]
+    - libgcc  # [not win]
 
 test:
   commands:
-    - $R -e "library('SpatialExtremes')"
+    - $R -e "library('SpatialExtremes')"  # [not win]
+    - "\"%R%\" -e \"library('SpatialExtremes')\""  # [win]
 
 about:
   home: http://spatialextremes.r-forge.r-project.org/
@@ -51,6 +57,8 @@ about:
     Dombry et al. (2013) <doi:10.1093/biomet/ass067>.'
 
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
