--- a/recipes/multinest/meta.yaml
+++ b/recipes/multinest/meta.yaml
@@ -5,6 +5,10 @@ package:
 source:
   git_url: https://github.com/JohannesBuchner/MultiNest
 
+build:
+   number: 1
+   skip: true  # [win]
+
 requirements:
 
   build:
@@ -34,6 +38,8 @@ test:
 
 about:
   home: https://github.com/JohannesBuchner/MultiNest
+  license_file: license.pdf
+  summary: MultiNest is a Bayesian inference tool which calculates the evidence and explores the parameter space which may contain multiple posterior modes and pronounced (curving) degeneracies in moderately high dimensions.
 
 extra:
   recipe-maintainers:
