--- a/recipes/multinest/meta.yaml
+++ b/recipes/multinest/meta.yaml
@@ -26,9 +26,9 @@ requirements:
 test:
   commands:
     - bash -c "cd ${PREFIX}/bin ; gaussian"
-    - test -f ${PREFIX}/lib/libmultinest.so [linux]
+    - test -f ${PREFIX}/lib/libmultinest.so # [linux]
     
-    - test -f ${PREFIX}/lib/libmultinest.dylib [osx]
+    - test -f ${PREFIX}/lib/libmultinest.dylib # [osx]
     
     - test -f ${PREFIX}/include/multinest.h
     
@@ -38,6 +38,7 @@ test:
 
 about:
   home: https://github.com/JohannesBuchner/MultiNest
+  license: custom
   license_file: license.pdf
   summary: MultiNest is a Bayesian inference tool which calculates the evidence and explores the parameter space which may contain multiple posterior modes and pronounced (curving) degeneracies in moderately high dimensions.
 
