Removing --show-files
which is not supported by the build on osx (for some reason)

--- a/recipes/multinest/meta.yaml
+++ b/recipes/multinest/meta.yaml
@@ -33,7 +33,7 @@ test:
     - test -f ${PREFIX}/include/multinest.h
     
     - conda inspect linkages --show-files -p $PREFIX multinest  # [not win]
-    - conda inspect objects --show-files -p $PREFIX multinest  # [osx]
+    - conda inspect objects -p $PREFIX multinest  # [osx]
 
 
 about:
