--- a/recipes/ad3/meta.yaml
+++ b/recipes/ad3/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "ad3-cpp" %}
 {% set version = "2.5.4" %}
-#{% set sha256 = "b2ada6f86faf5c9032e8b1a7b8cc0dff68a229e90ad80b366f5564fec03caa17" %}
+{% set sha256 = "b2ada6f86faf5c9032e8b1a7b8cc0dff68a229e90ad80b366f5564fec03caa17" %}
 
 package:
   name: {{ name|lower }}
