--- a/recipes/whitebox_tools/meta.yaml
+++ b/recipes/whitebox_tools/meta.yaml
@@ -38,7 +38,7 @@ about:
   license: MIT
   license_family: MIT
   license_file: {{ name }}/LICENSE.txt
-  summary: 'Library for analyzing geospatial data.'
+  summary: 'A source of plugin tools for _Whitebox GAT_, an open-source GIS and remote sensing package.'
 
 extra:
   recipe-maintainers:
