Restore Windows sha256
This partly reverts commit 4bc349d29f97e471dfd0f8abc3f77ba977116f62.

--- a/recipes/cspice/meta.yaml
+++ b/recipes/cspice/meta.yaml
@@ -4,6 +4,10 @@
 
 {% set platform_segment = "PC_Linux_GCC_64bit" %}                                      # [linux64]
 {% set sha256 = "93cd4fbce5818f8b7fecf3914c5756b8d41fd5bdaaeac1f4037b5a5410bc4768" %}  # [linux64]
+{% set platform_segment = "PC_Windows_VisualC_32bit" %}                                # [win32]
+{% set sha256 = "db48e5beddc0e50f7a0224bb2c6f2b39fc38f84628ad5cd455e847fc70aa5e75" %}  # [win32]
+{% set platform_segment = "PC_Windows_VisualC_64bit" %}                                # [win64]
+{% set sha256 = "b29dfb0b41ae8322c60ee9d162beb97433d21e12843ecbe03d819e5edef45920" %}  # [win64]
 {% set platform_segment = "MacIntel_OSX_AppleC_64bit" %}                               # [osx]
 {% set sha256 = "f5d48c4b0d558c5d71e8bf6fcdf135b0943210c1ff91f8191dfc447419a6b12e" %}  # [osx]
 
