--- a/recipes/ad3/meta.yaml
+++ b/recipes/ad3/meta.yaml
@@ -11,7 +11,7 @@ source:
   #path: ../
   #fn: ad3-{{ version }}.tar.gz
   url: https://github.com/Sebastianborszcz/AD3
-  #sha256: {{ sha256 }}
+  sha256: {{ sha256 }}
 
 
 build:
