Fix up feedfinder2

--- a/recipes/feedfinder2/meta.yaml
+++ b/recipes/feedfinder2/meta.yaml
@@ -25,6 +25,13 @@ requirements:
 
   run:
     - python
+    - six
+    - requests
+    - beautifulsoup4
+
+test:
+  imports:
+    - feedfinder2
 
 
 about:
