--- a/recipes/flang/meta.yaml
+++ b/recipes/flang/meta.yaml
@@ -40,6 +40,8 @@ test:
   files:
     - hello_world.f90
   commands:
+    # TODO - Figure out why the following line is needed.
+    - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64  # [win64]
     - flang --version
     - flang hello_world.f90
     - ./a.out   # [unix]
