Fix license file name

--- a/recipes/flang/meta.yaml
+++ b/recipes/flang/meta.yaml
@@ -50,7 +50,7 @@ test:
 about:
   home: http://github.com/flang-compiler/flang
   license: Apache 2.0
-  license_file: LICENSE.TXT
+  license_file: LICENSE.txt
   summary: Flang is a Fortran compiler targeting LLVM.
 
 extra:
