Update jieba3k recipe

--- a/recipes/jieba3k/meta.yaml
+++ b/recipes/jieba3k/meta.yaml
@@ -16,7 +16,7 @@ source:
 build:
   noarch: python
   number: 0
-  script: 'python setup.py install '
+  script: 'python setup.py install'
   skip: True  # [py2k]
 
 requirements:
@@ -33,7 +33,8 @@ about:
   home: https://github.com/fxsjy/jieba/tree/jieba3k
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  # See issue https://github.com/fxsjy/jieba/issues/545 for adding LICENSE to src distribution
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: Chinese Words Segementation Utilities
   description: "Jieba (Chinese for 'to stutter') Chinese text segmentation: built to be the best Python Chinese word segmentation module."
   dev_url: 'https://github.com/fxsjy/jieba/tree/jieba3k'
@@ -41,3 +42,4 @@ about:
 extra:
   recipe-maintainers: 
   - ganeshhubale
+  - synapticarbors
