Fix silly error

--- a/recipes/drms/meta.yaml
+++ b/recipes/drms/meta.yaml
@@ -36,7 +36,7 @@ test:
 
 about:
   home: https://github.com/kbg/drms
-  license: MIT License
+  license: MIT
   license_family: MIT
   license_file: ''
   summary: Access HMI, AIA and MDI data with Python
