--- a/recipes/pyuvdata/meta.yaml
+++ b/recipes/pyuvdata/meta.yaml
@@ -9,8 +9,6 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
-  #git_url: https://github.com/HERA-Team/pyuvdata.git
-  #git_rev: conda_test
 
 build:
   number: 0
@@ -33,7 +31,6 @@ requirements:
     - pyephem
     - python <3
     - scipy
-    - setuptools
 
 test:
   requires:
@@ -46,7 +43,7 @@ test:
     - nosetests pyuvdata
 
 about:
-  home: https://github.com/HERA-Team/pyvudata
+  home: https://github.com/HERA-Team/pyuvdata
   license: BSD 2-clause
   license_family: BSD
   license_file: LICENSE
