--- a/recipes/r-rpostgresql/meta.yaml
+++ b/recipes/r-rpostgresql/meta.yaml
@@ -62,7 +62,7 @@ test:
 
 about:
   home: https://github.com/tomoakin/RPostgreSQL, https://cran.r-project.org/package=DBI, http://www.postgresql.org
-  license: GPL-2 | file LICENSE
+  license: GPL-2
   summary: Database interface and 'PostgreSQL' driver for 'R'. This package provides a Database
     Interface 'DBI' compliant  driver for 'R' to access 'PostgreSQL' database systems.   In
     order to build and install this package from source, 'PostgreSQL'  itself must be
