include other modules in test import. remove trailing line that the linter doesn't like

--- a/recipes/pyalveo/meta.yaml
+++ b/recipes/pyalveo/meta.yaml
@@ -38,9 +38,9 @@ test:
   # List all the packages/modules that `run_test.py` imports.
   imports:
     - pyalveo
-#    - requests
-#    - oauthlib
-#    - requests_oauthlib
+    - requests
+    - oauthlib
+    - requests_oauthlib
 #    - pyalveo.tests
 
 about:
@@ -73,4 +73,3 @@ extra:
     # GitHub IDs for maintainers of the recipe.
     # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - stevecassidy
-
