--- a/recipes/pyalveo/meta.yaml
+++ b/recipes/pyalveo/meta.yaml
@@ -33,15 +33,13 @@ requirements:
   run:
     - python
 
-#test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
-#  imports:
-#    - pyalveo
-#    - requests
-#    - oauthlib
-#    - requests_oauthlib
-#    - pyalveo.tests
+test:
+  imports:
+    - pyalveo
+  requires:
+    - requests
+    - oauthlib
+    - requests-oauthlib
 
 about:
   home: http://github.com/Alveo/pyalveo
