--- a/recipes/pyalveo/meta.yaml
+++ b/recipes/pyalveo/meta.yaml
@@ -40,6 +40,7 @@ test:
     - requests
     - oauthlib
     - requests-oauthlib
+    - python-dateutil
 
 about:
   home: http://github.com/Alveo/pyalveo
