--- a/recipes/xdg/meta.yaml
+++ b/recipes/xdg/meta.yaml
@@ -30,7 +30,7 @@ test:
 about:
   home: https://github.com/srstevenson/xdg
   license: ISC
-  license_file: LICENSE
+  license_file: LICENCE
   summary: 'Variables defined by the XDG Base Directory Specification'
 
   description: |
