--- a/recipes/ad3/meta.yaml
+++ b/recipes/ad3/meta.yaml
@@ -12,7 +12,8 @@ package:
 source:
   #path: ../
   #fn: ad3-{{ version }}.tar.gz
-  url: https://github.com/DerThorsten/AD3/archive/{{ version}}.tar.gz
+  url: https://github.com/Sebastianborszcz/AD3
+  #/archive/{{ version}}.tar.gz
   sha256: {{ sha256 }}
 
 
