removed the single quote to resolve parsing issues

--- a/recipes/pivottable/meta.yaml
+++ b/recipes/pivottable/meta.yaml
@@ -30,7 +30,7 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE.md
-  summary: 'Open-source Javascript Pivot Table (aka Pivot Grid, Pivot Chart, Cross-Tab) implementation with drag'n'drop.'
+  summary: 'Open-source Javascript Pivot Table (aka Pivot Grid, Pivot Chart, Cross-Tab) implementation with drag and drop.'
   description: |
     PivotTable.js is a Javascript Pivot Table library with drag'n'drop 
     functionality built on top of jQuery/jQueryUI and originally written 
