--- a/recipes/ad3/meta.yaml
+++ b/recipes/ad3/meta.yaml
@@ -1,8 +1,6 @@
 {% set name = "ad3-cpp" %}
 {% set version = "2.5.4" %}
 {% set sha256 = "d98eb1b6ab5fd179747f2130592533c70f3d4b70189c3cc4f3c9439d3bb80b5a" %}
-#"a7c013e04ee3a103ff0bd03ae25ddf9eff11320d5b29941aa2b95dd9eb79a41c" %}
-#"48d2703822802678f1ef4a3ad97e57581cbf8c61a1d8f6cb621e0b3cd2f5ab50" %}
 #"b2ada6f86faf5c9032e8b1a7b8cc0dff68a229e90ad80b366f5564fec03caa17" %}
 
 package:
@@ -12,8 +10,7 @@ package:
 source:
   #path: ../
   #fn: ad3-{{ version }}.tar.gz
-  url: https://github.com/Sebastianborszcz/AD3/tree/master/ad3
-  #/archive/{{ version}}.tar.gz
+  url: https://github.com/DerThorsten/AD3/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 
@@ -45,4 +42,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - Sebastianborszcz
+    - DerThorsten
