--- a/recipes/pivottablejs/meta.yaml
+++ b/recipes/pivottablejs/meta.yaml
@@ -23,6 +23,10 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - pivottablejs
+
 about:
   home: https://github.com/nicolaskruchten/jupyter_pivottablejs
   license: MIT
