--- a/recipes/ad3/meta.yaml
+++ b/recipes/ad3/meta.yaml
@@ -37,7 +37,7 @@ about:
   license_file: LICENSE
   summary: 'AD3 Alternating Directions Dual Decomposition'
   description: 'AD3 Alternating Directions Dual Decomposition'
-  documentation_url:  https://github.com/DerThorsten/AD3
+  #documentation_url:  https://github.com/DerThorsten/AD3
   dev_url: https://github.com/DerThorsten/AD3
 
 extra:
