--- a/recipes/r-ffield/meta.yaml
+++ b/recipes/r-ffield/meta.yaml
@@ -41,6 +41,8 @@ about:
   summary: Force field simulation of interaction of set of points. Very useful for placing text
     labels on graphs, such as scatterplots.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
