--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - future
   run:
     - python
-    - python.app       [osx]
+    - python.app  # [osx]
     - atom >=0.4.0
     - pyqt
     - qtpy >=1.3
