--- a/recipes/r-rpostgresql/meta.yaml
+++ b/recipes/r-rpostgresql/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = '0.6-2' %}
+{% set sha256 = '080118647208bfa2621bcaac0d324891cc513e07618fa22e3c50ec2050e1b0d5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -13,15 +14,9 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/RPostgreSQL_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/RPostgreSQL/RPostgreSQL_{{ version }}.tar.gz
-
-
-  sha256: 080118647208bfa2621bcaac0d324891cc513e07618fa22e3c50ec2050e1b0d5
-  # patches:
-   # List any patch files here
-   # - fix.patch
+  sha256: {{ sha256 }}
 
 build:
-  # If this is a new build for the same version, increment the build number.
   number: 0
 
   # This is required to make R link correctly on Linux.
@@ -42,28 +37,23 @@ requirements:
 
   run:
     - r-base
-    - r-dbi >=0.3   # [not win]
-    - libgcc        # [not win]
+    - r-dbi >=0.3
+    - libgcc               # [not win]
     - libpq
 
 test:
   commands:
-    # You can put additional test commands to be run here.
     - $R -e "library('RPostgreSQL')"  # [not win]
     - "\"%R%\" -e \"library('RPostgreSQL')\""  # [win]
     - conda inspect linkages {{ name }}  # [linux]
     - conda inspect objects {{ name }}  # [osx]
 
-
-  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
-  # in the recipe that will be run at test time.
-
-  # requires:
-    # Put any additional test requirements here.
-
 about:
   home: https://github.com/tomoakin/RPostgreSQL, https://cran.r-project.org/package=DBI, http://www.postgresql.org
+  license_family: GPL2
   license: GPL-2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses/GPL-2'      # [win]
   summary: Database interface and 'PostgreSQL' driver for 'R'. This package provides a Database
     Interface 'DBI' compliant  driver for 'R' to access 'PostgreSQL' database systems.   In
     order to build and install this package from source, 'PostgreSQL'  itself must be
@@ -71,28 +61,11 @@ about:
     header files. These files are provided as 'postgresql-devel' package under some
     Linux distributions. On 'macOS' and 'Microsoft Windows' system the attached 'libpq'
     library source will be used.
-  license_family: GPL2
-
-# The original CRAN metadata for this package was:
-
-# Package: RPostgreSQL
-# Version: 0.6-2
-# Date: 2017-06-24
-# Title: R Interface to the 'PostgreSQL' Database System
-# Author: Joe Conway, Dirk Eddelbuettel, Tomoaki Nishiyama, Sameer Kumar Prayaga (during 2008), Neil Tiffin
-# Maintainer: Tomoaki Nishiyama <tomoakin@staff.kanazawa-u.ac.jp>
-# Description: Database interface and 'PostgreSQL' driver for 'R'. This package provides a Database Interface 'DBI' compliant  driver for 'R' to access 'PostgreSQL' database systems.   In order to build and install this package from source, 'PostgreSQL'  itself must be present your system to provide 'PostgreSQL' functionality  via its libraries and header files. These files are provided as 'postgresql-devel' package under some Linux distributions. On 'macOS' and 'Microsoft Windows' system the attached 'libpq' library source will be used.
-# LazyLoad: true
-# Depends: R (>= 2.9.0), methods, DBI (>= 0.3)
-# License: GPL-2 | file LICENSE
-# Copyright: Authors listed above, PostgreSQL Global Development Group, and The Regents of the University of California
-# Collate: S4R.R zzz.R PostgreSQLSupport.R dbObjectId.R PostgreSQL.R
-# URL: https://github.com/tomoakin/RPostgreSQL, https://cran.r-project.org/package=DBI, http://www.postgresql.org
-# NeedsCompilation: yes
-# Packaged: 2017-06-24 03:16:20 UTC; tomoaki
-# Repository: CRAN
-# Date/Publication: 2017-06-24 07:17:52 UTC
 
 extra:
   recipe-maintainers:
     - mariusvniekerk
+    - johanneskoester
+    - bgreuning
+    - daler
+    - jdblischak
