--- a/recipes/r-minicran/meta.yaml
+++ b/recipes/r-minicran/meta.yaml
@@ -58,6 +58,6 @@ extra:
   recipe-maintainers:
     - mariusvniekerk
     - johanneskoester
-    - bgreuning
+    - bgruening
     - daler
     - jdblischak
