--- a/recipes/r-rpostgresql/meta.yaml
+++ b/recipes/r-rpostgresql/meta.yaml
@@ -66,6 +66,6 @@ extra:
   recipe-maintainers:
     - mariusvniekerk
     - johanneskoester
-    - bgreuning
+    - bgruening
     - daler
     - jdblischak
