Fix up where dependencies are listed. Upstream now has licence. Remove comments.

--- a/recipes/pyalveo/meta.yaml
+++ b/recipes/pyalveo/meta.yaml
@@ -1,13 +1,7 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
 
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "pyalveo" %}
-{% set version = "1.0.3" %}
-{% set sha256 = "35cbdeb6423bfb6f9a2fb72d7707fdfe17a69fe0eda9a514c73b23604809c5fc" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
+{% set version = "1.0.4" %}
+{% set sha256 = "5ed63f3dc6068747ad70c03c714a1e816fa5ff6edc719d63f5de40c3198601a5" %}
 
 package:
   name: {{ name|lower }}
@@ -27,36 +21,23 @@ requirements:
   build:
     - python
     - setuptools
-    - requests
-    - oauthlib
-    - requests-oauthlib
   run:
     - python
-
-test:
-  imports:
-    - pyalveo
-  requires:
     - requests
     - oauthlib
     - requests-oauthlib
     - python-dateutil
 
+test:
+  imports:
+    - pyalveo
+
 about:
   home: http://github.com/Alveo/pyalveo
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: BSD-3-Clause
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
   license_family: BSD
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  #license_file: LICENSE.txt
+  license_file: LICENSE.txt
   summary: 'Python module to interface to the Alveo repository of speech and language data'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
     `Alveo <http://alveo.edu.au>`_ is a Virtual Laboratory platform to support
     research on Human Communication. It
@@ -69,6 +50,4 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
-    - stevecassidy
+   - stevecassidy
