--- a/recipes/pyalveo/meta.yaml
+++ b/recipes/pyalveo/meta.yaml
@@ -1,7 +1,7 @@
 
 {% set name = "pyalveo" %}
-{% set version = "1.0.4" %}
-{% set sha256 = "5ed63f3dc6068747ad70c03c714a1e816fa5ff6edc719d63f5de40c3198601a5" %}
+{% set version = "1.0.5" %}
+{% set sha256 = "9087f7a16c47a7d4365c89333d90b4546b1e9c193c9da78c34d20960237579a7" %}
 
 package:
   name: {{ name|lower }}
@@ -43,7 +43,7 @@ about:
     research on Human Communication. It
     stores large collections of audio, video and textual data representing language use
     and provides an API to search and retrieve data and metadata.  This Python library
-    is one way that Alveo integrates tools for processing data to support repeatable
+    is one way that Alveo integrals tes tools for processing data to support repeatable
     research.
   doc_url: http://pyalveo.readthedocs.io/
   dev_url: https://github.com/Alveo/pyalveo
