Add missing dependency on qtpy at build time
This is due to it being specified in setup.py and hence downloaded by setuptools.

--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - kiwisolver >=0.2.0
     - ply
     - future
+    - qtpy >=1.3
   run:
     - python
     - python.app  # [osx]
