adding license file

--- a/recipes/r-clustergeneration/meta.yaml
+++ b/recipes/r-clustergeneration/meta.yaml
@@ -44,7 +44,12 @@ about:
     as degree of separation, number of clusters, number of variables, number of noisy
     variables.
   license_family: GPL3
+  lincense_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
     - Cashalow
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
