--- a/recipes/r-clustergeneration/meta.yaml
+++ b/recipes/r-clustergeneration/meta.yaml
@@ -44,7 +44,7 @@ about:
     as degree of separation, number of clusters, number of variables, number of noisy
     variables.
   license_family: GPL3
-  lincense_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
