--- a/recipes/r-clustergeneration/meta.yaml
+++ b/recipes/r-clustergeneration/meta.yaml
@@ -44,7 +44,8 @@ about:
     as degree of separation, number of clusters, number of variables, number of noisy
     variables.
   license_family: GPL3
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win] 
 
 extra:
   recipe-maintainers:
