--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -33,7 +33,7 @@ test:
 
 about:
   home: https://yihui.name/animation
-  license: GPL
+  license: GPL (>=2)
   summary: Provides functions for animations in statistics, covering topics in probability theory,
     mathematical statistics, multivariate statistics, non-parametric statistics, sampling
     survey, linear models, time series, computational statistics, data mining and machine
@@ -41,8 +41,9 @@ about:
     Also provided in this package are a series of functions to save animations to various
     formats, e.g. Flash, 'GIF', HTML pages, 'PDF' and videos. 'PDF' animations can be
     inserted into 'Sweave' / 'knitr' easily.
-  license_family: GPL
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win] 
 
 extra:
   recipe-maintainers:
